--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
               $("input[name=slider]:checked").next().click()
             });
             $('.button-prev').click(function() {
-                $("input[name=slider]:checked").prev.click()
+                $("input[name=slider]:checked").prev().click()
               });
           });
     </script>
