Adding work description

--- a/index.html
+++ b/index.html
@@ -155,7 +155,10 @@
                     <div class="w_data ">
                         <h4 class="course-title">Full Stack Internship</h4>
                         <div class="duration"><i class="uil uil-calendar-alt"></i>Jan 2022-Mar 2022</div>
-                        <p class="w_info">Organization: ByajBook</p>
+                        <p class="w_info">Organization: ByajBook <br>
+                            Worked on developing Byajbook Desktop Application and Web Application. <br>
+                            Workings: Sync Services, Language Internationalization, Notification Setup, Permissions,  Razorpay Payment, APIs, etc..
+                        </p>
                     </div>
                 </div>
                 <div class="work__list">
@@ -167,7 +170,9 @@
                     <div class="w_data">
                         <h4 class="course-title">DevOps Internship</h4>
                         <div class="duration"><i class="uil uil-calendar-alt"></i> Mar 2022-May 2022</div>
-                        <p class="w_info">Organization: Tata Consultancy Services</p>
+                        <p class="w_info">Organization: Tata Consultancy Services <br>
+                            Workings: Created microservices on spring boot, implemented CI/CD pipeline, git push triggers Jenkins pipeline, docker file created and pushed, updates reflect on AWS EC2 & real-world running application.
+                        </p>
                     </div>
                 </div>
                 <div class="work__list">
@@ -178,7 +183,7 @@
                     </div>
                     <div class="w_data">
                         <h4 class="course-title">System Engineer</h4>
-                        <div class="duration"><i class="uil uil-calendar-alt"></i> Jun 2022- Present</div>
+                        <div class="duration"><i class="uil uil-calendar-alt"></i> Jun 2022- Oct 2023</div>
                         <p class="w_info">Organization: Tata Consultancy Services</p>
                     </div>
                 </div>
@@ -199,14 +204,14 @@
                     <img class="h__img" src="learning.png" alt="">
                     <div class="h-title">Machine earning</div> -->
                 </div>
-                <div class="h__list">
+                <!-- <div class="h__list">
                     <img class="h__img" src="hacking.png" alt="">
                     <div class="h-title">Ethical Hacking</div>
                 </div>
                 <div class="h__list">
                     <img class="h__img" src="website.png" alt="">
                     <div class="h-title">Web Development</div>
-                </div>
+                </div> -->
             </div>
         </section>
 
