New profile photo, projects removed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <a href="#contact" class="button">Contact</a>
             </div>
             <div class="home__img">
-                <img src="jay.png" alt="Not Found">
+                <img src="Jay_Solanki.PNG" alt="Not Found">
             </div>
             <div class="home_scroll">
                 <p><a href="#about"><i class="uil uil-mouse-alt"></i>Scroll Down</a></p>
@@ -106,10 +106,11 @@
             <div class="qualification__container">
                 <div class="qualification__list">
                     <div class="q_data">
-                        <h4 class="course-title">SSC</h4>
-                        <div class="duration"><i class="uil uil-calendar-alt"></i> 2015 - 2016</div>
-                        <p class="q_info">Board: GSEB</p>
-                        <p class="q_info">Grade: 83.17%</p>
+                        <h4 class="course-title">Computer Engineering</h4>
+                        <div class="duration"><i class="uil uil-calendar-alt"></i> 2018 - 2022</div>
+                        <p class="q_info">L. D. College of Engineering</p>
+                        <p class="q_info">University: GTU</p>
+                        <p class="q_info">Grade: 9.24</p>
                     </div>
                     <div class="q_track">
                         <div class="q_line"></div>
@@ -132,11 +133,10 @@
                 </div>
                 <div class="qualification__list">
                     <div class="q_data">
-                        <h4 class="course-title">Computer Engineering</h4>
-                        <div class="duration"><i class="uil uil-calendar-alt"></i> 2018 - 2022</div>
-                        <p class="q_info">L. D. College of Engineering</p>
-                        <p class="q_info">University: GTU</p>
-                        <p class="q_info">Grade: 9.24</p>
+                        <h4 class="course-title">SSC</h4>
+                        <div class="duration"><i class="uil uil-calendar-alt"></i> 2015 - 2016</div>
+                        <p class="q_info">Board: GSEB</p>
+                        <p class="q_info">Grade: 83.17%</p>
                     </div>
                     <div class="q_track">
                         <div class="q_line"></div>
@@ -153,12 +153,9 @@
                         <div class="w_vline"></div>
                     </div>
                     <div class="w_data ">
-                        <h4 class="course-title">Full Stack Internship</h4>
-                        <div class="duration"><i class="uil uil-calendar-alt"></i>Jan 2022-Mar 2022</div>
-                        <p class="w_info">Organization: ByajBook <br>
-                            Worked on developing Byajbook Desktop Application and Web Application. <br>
-                            Workings: Sync Services, Language Internationalization, Notification Setup, Permissions,  Razorpay Payment, APIs, etc..
-                        </p>
+                        <h4 class="course-title">System Engineer</h4>
+                        <div class="duration"><i class="uil uil-calendar-alt"></i> Jun 2022- Oct 2023</div>
+                        <p class="w_info">Organization: Tata Consultancy Services</p>
                     </div>
                 </div>
                 <div class="work__list">
@@ -182,9 +179,12 @@
                         <div class="w_vline"></div>
                     </div>
                     <div class="w_data">
-                        <h4 class="course-title">System Engineer</h4>
-                        <div class="duration"><i class="uil uil-calendar-alt"></i> Jun 2022- Oct 2023</div>
-                        <p class="w_info">Organization: Tata Consultancy Services</p>
+                        <h4 class="course-title">Full Stack Internship</h4>
+                        <div class="duration"><i class="uil uil-calendar-alt"></i>Jan 2022-Mar 2022</div>
+                        <p class="w_info">Organization: ByajBook <br>
+                            Worked on developing Byajbook Desktop Application and Web Application. <br>
+                            Workings: Sync Services, Language Internationalization, Notification Setup, Permissions,  Razorpay Payment, APIs, etc..
+                        </p>
                     </div>
                 </div>
             </div>
@@ -226,7 +226,7 @@
                         <span class="skills__name">HTML & CSS</span>
                     </div>
                     <div class="skills__bar skills__html"></div>
-                    <div><span class="skills__percentage">75%</span></div>
+                    <!-- <div><span class="skills__percentage">75%</span></div> -->
                 </div>
                 <div class="skills__data">
                     <div class="skills__names">
@@ -234,7 +234,7 @@
                         <span class="skills__name">JAVASCRIPT</span>
                     </div>
                     <div class="skills__bar skills__js"></div>
-                    <div><span class="skills__percentage">70%</span></div>
+                    <!-- <div><span class="skills__percentage">70%</span></div> -->
                 </div>
                 <div class="skills__data">
                     <div class="skills__names">
@@ -242,7 +242,7 @@
                         <span class="skills__name">AWS Solution Architect</span>
                     </div>
                     <div class="skills__bar skills__aws"></div>
-                    <div><span class="skills__percentage">75%</span></div>
+                    <!-- <div><span class="skills__percentage">75%</span></div> -->
                 </div>
                 <div class="skills__data">
                     <div class="skills__names">
@@ -250,7 +250,7 @@
                         <span class="skills__name">MERN (MongoDB, Express, React, Node.js)</span>
                     </div>
                     <div class="skills__bar skills__mern"></div>
-                    <div><span class="skills__percentage">70%</span></div>
+                    <!-- <div><span class="skills__percentage">70%</span></div> -->
                 </div>
                 <div class="skills__data">
                     <div class="skills__names">
@@ -258,7 +258,7 @@
                         <span class="skills__name">C</span>
                     </div>
                     <div class="skills__bar skills__c"></div>
-                    <div><span class="skills__percentage">75%</span></div>
+                    <!-- <div><span class="skills__percentage">75%</span></div> -->
                 </div>
                 <div class="skills__data">
                     <div class="skills__names">
@@ -266,7 +266,7 @@
                         <span class="skills__name">Angular</span>
                     </div>
                     <div class="skills__bar skills__angular"></div>
-                    <div><span class="skills__percentage">65%</span></div>
+                    <!-- <div><span class="skills__percentage">65%</span></div> -->
                 </div>
                 <div class="skills__data">
                     <div class="skills__names">
@@ -274,7 +274,7 @@
                         <span class="skills__name">Python</span>
                     </div>
                     <div class="skills__bar skills__py"></div>
-                    <div><span class="skills__percentage">70%</span></div>
+                    <!-- <div><span class="skills__percentage">70%</span></div> -->
                 </div>
                 <div class="skills__data">
                     <div class="skills__names">
@@ -282,7 +282,7 @@
                         <span class="skills__name">Django</span>
                     </div>
                     <div class="skills__bar skills__django"></div>
-                    <div><span class="skills__percentage">55%</span></div>
+                    <!-- <div><span class="skills__percentage">55%</span></div> -->
                 </div>
                 <div class="skills__data">
                     <div class="skills__names">
@@ -290,7 +290,7 @@
                         <span class="skills__name">MySQL</span>
                     </div>
                     <div class="skills__bar skills__mysql"></div>
-                    <div><span class="skills__percentage">60%</span></div>
+                    <!-- <div><span class="skills__percentage">60%</span></div> -->
                 </div>
                 <div class="skills__data">
                     <div class="skills__names">
@@ -298,12 +298,12 @@
                         <span class="skills__name">Java</span>
                     </div>
                     <div class="skills__bar skills__java"></div>
-                    <div><span class="skills__percentage">40%</span></div>
+                    <!-- <div><span class="skills__percentage">40%</span></div> -->
                 </div>
             </div>
         </section>
 
-        <section class="project-slider" id="projects">
+        <!-- <section class="project-slider" id="projects">
             <h2 class="section-title">Projects</h2>
             <div class="project-grid-column">
                 <div class="project-grid-div">
@@ -393,7 +393,7 @@
                 <!-- <div class="button-next"><i class="uil uil-step-forward"></i></div> -->
                 <!-- <div class="button-prev"><i class="uil uil-previous"></i></div> -->
             </div>
-        </section>
+        </section> -->
 
         <section class="project-slider" id="certificates">
             <h2 class="section-title">Certificates</h2>
