resume change and css modify for photo in mobile

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <h2 class="about__subtitle">Jay Solanki</h2>
                     <p class="about__text">Aspire To Utilize My Skills That Can Contribute The Best For The Growth Of
                         Organization While Ensuring Growth In Personal Career</p>
-                    <button class="about__button"><a href="Jay Resume.pdf" download="resume">Resume <i
+                    <button class="about__button"><a href="JAY_SOLANKI_CV.pdf" download="resume">Resume <i
                                 class="uil uil-cloud-download"></i></a></button>
                 </div>
             </div>
@@ -390,8 +390,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="button-next"><i class="uil uil-step-forward"></i></div> -->
-                <!-- <div class="button-prev"><i class="uil uil-previous"></i></div> -->
+                // <div class="button-next"><i class="uil uil-step-forward"></i></div> 
+                // <div class="button-prev"><i class="uil uil-previous"></i></div> 
             </div>
         </section> -->
 
